syntax = "proto3";

enum CustomConfigStatus {
    ConfigSuccess = 0;
    ConfigFail = 1;
}

message CustomConfigRequest {
    string info = 1;
    int32 version = 2;
}

message CustomConfigResponse {
    CustomConfigStatus status = 1;
    int32 dummy = 2;
}
